--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,21 @@ idna==3.10
 requests==2.32.3
 urllib3==2.2.3
 youtube-transcript-api==0.6.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+filelock==3.16.1
+fsspec==2024.10.0
+huggingface-hub==0.26.2
+idna==3.10
+numpy==2.1.2
+packaging==24.1
+PyYAML==6.0.2
+regex==2024.9.11
+requests==2.32.3
+safetensors==0.4.5
+tokenizers==0.20.1
+tqdm==4.66.6
+transformers==4.46.1
+typing_extensions==4.12.2
+urllib3==2.2.3
+youtube-transcript-api==0.6.2
