--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 .env
 .venv/
-clean_markdown/output
-clean_markdown/input
+clean_markdown/output/
+clean_markdown/input/
 
-find_unique/output
-find_unique/input
+find_unique/output/
+find_unique/input/
 
-youtube_summarizer/output
-youtube_summarizer/input
+youtube_summarizer/output/
+youtube_summarizer/input/
 
-intl_manager/output
-intl_manager/input
+intl_manager/output/
+intl_manager/input/
